[package]
name = "openxr"
description = "High-level, mostly-safe OpenXR bindings"
repository = "https://github.com/Ralith/openxrs"
readme = "../README.md"
version = "0.14.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
categories = ["api-bindings", "rendering"]
keywords = ["vr"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[features]
static = ["sys/static", "linked"]
loaded = ["libloading"]
linked = ["sys/prototypes"]
mint = ["sys/mint"]
default = ["static"]

[dependencies]
sys = { package = "openxr-sys", path = "../sys", version = "0.8.5" }
libc = "0.2.50"
libloading = { version = "0.7", optional = true }

[dev-dependencies]
ash = "0.32"
ctrlc = "3.1.5"
gfx-hal = "0.8"
gfx-backend-vulkan = "0.8"
gfx-auxil = "0.9.0"
drop_guard = "0.2.1"
wgpu-core = { path = "../../wgpu/wgpu-core" }
wgpu-types = { path = "../../wgpu/wgpu-types" }
wgpu = { path = "../../wgpu-rs" }
env_logger = "0.8.3"
pollster = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["profileapi"] }

[package.metadata.docs.rs]
features = ["linked", "loaded", "mint"]

